turnserver/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "storageSku": {
            "type": "string",
            "allowedValues": [
                "Premium_LRS",
                "Premium_ZRS",
                "Standard_GRS",
                "Standard_GZRS",
                "Standard_RAGRS",
                "Standard_RAGZRS",
                "Standard_LRS",
                "Standard_ZRS"
            ],
            "defaultValue": "Standard_LRS",
            "metadata": {
                "description": "The type of replication to use for the storage account."
            }
        },
        "turnAdmin": {
            "type": "string",
            "defaultValue": "admin",
            "metadata": {
                "description": "Administrator username for the turn server."
            }
        },
        "turnAdminPassword": {
            "type": "securestring",
            "defaultValue": "ThisIsThe4dminP$$",
            "minLength": 8,
            "metadata": {
                "description": "Administrator password for the turn server."
            }
        },
        "turnServerName": {
            "type": "string",
            "defaultValue": "turnSrv",
            "metadata": {
                "description": "The base name of the turn server"
            }
        },
        "vmAdminPassword": {
            "type": "securestring",
            "minLength": 8,
            "defaultValue": "ThisIsThe4dminP$$",
            "metadata": {
                "description": "Administrator password for the turn server virtual machine"
            }
        },
        "vmAdminUsername": {
            "type": "string",
            "defaultValue": "adminUsername",
            "metadata": {
                "description": "Username for the turn server virtual machine"
            }
        }
    },
    "functions": [],
    "variables": {
        "serverName": "[toLower(substring(concat(parameters('turnServerName'),uniqueString(resourceGroup().id)),0,15))]",
        "ipAddressId": "[concat(variables('serverName'),'-ip')]",
        "vnet": "[concat(variables('serverName'),'-vnet')]",
        "subnet": "[concat(variables('serverName'),'-subnet')]",
        "nsg": "[concat(variables('serverName'),'-nsg')]",
        "nic": "[concat(variables('serverName'),'-nic')]",
        "storage": "[concat(variables('serverName'),'storage')]",
        "disk": "[concat(variables('serverName'),'-disk')]"
    },
    "resources": [
        {
            "name": "[variables('storage')]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2019-06-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "Turn Server Storage Account"
            },
            "sku": {
                "name": "[parameters('storageSku')]"
            },
            "kind": "Storage"
        },
        {
            "name": "[variables('ipAddressId')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "PublicIPAddress"
            },
            "properties": {
                "publicIPAllocationMethod": "Static",
                "dnsSettings": {
                    "domainNameLabel": "[variables('serverName')]"
                }
            }
        },
        {
            "name": "[variables('nsg')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "description": "Allow ssh access",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "TURN",
                        "properties": {
                            "description": "Allow TURN access",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3478",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 310,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "TURN_ALT",
                        "properties": {
                            "description": "Allow TURN access",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3479",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 315,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "TURN_SSL",
                        "properties": {
                            "description": "Allow TURN access over TLS",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5349",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 320,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "TURN_SSL_ALT",
                        "properties": {
                            "description": "Allow TURN access over TLS",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5350",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 325,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "description": "Allow HTTP access for TLS verification",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 330,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HTTPS",
                        "properties": {
                            "description": "Allow HTTPS access for TLS verification",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 340,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('vnet')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg'))]"
            ],
            "tags": {
                "displayName": "[variables('vnet')]"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('subnet')]",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('nic')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('ipAddressId'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', variables('vnet'))]"
            ],
            "tags": {
                "displayName": "[variables('nic')]"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('ipAddressId'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet'), variables('subnet'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('serverName')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-07-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('nic'))]"
            ],
            "tags": {
                "displayName": "[variables('serverName')]"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_A2_v2"
                },
                "osProfile": {
                    "computerName": "[variables('serverName')]",
                    "adminUsername": "[parameters('vmAdminUsername')]",
                    "adminPassword": "[parameters('vmAdminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "18.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[variables('disk')]",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nic'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', variables('storage'))).primaryEndpoints.blob]"
                    }
                }
            }
        },
        {
            "name": "[concat(variables('serverName'),'/installturn')]",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "apiVersion": "2019-07-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "Install script for TURN server in Linux VM"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', variables('serverName'))]",
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('ipAddressId'))]"
            ],
            "properties": {
                "publisher": "Microsoft.Azure.Extensions",
                "type": "CustomScript",
                "typeHandlerVersion": "2.1",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "https://raw.githubusercontent.com/jmservera/videochat/turnserver/turnserver/scripts/installturn.sh"
                    ]
                },
                "protectedSettings": {
                    "commandToExecute": "[concat('sh installturn.sh ''',parameters('turnAdmin'),''' ''',parameters('turnAdminPassword'),''' ''', reference( resourceId('Microsoft.Network/publicIPAddresses', variables('ipAddressId')) ).dnsSettings.fqdn, ''' ''', reference( resourceId('Microsoft.Network/publicIPAddresses', variables('ipAddressId')) ).ipAddress, '''')]"
                }
            }
        }
    ],
    "outputs": {
        "dns":{
            "type":"string",
            "value":"[reference( resourceId('Microsoft.Network/publicIPAddresses', variables('ipAddressId')) ).dnsSettings.fqdn]"
        }
    }
}
